# OpenCV_Live_averaging

./: CMakeLists.txt  Capture.cc  Capture.h  Makefile  night_enhance.cc  notes.txt
